# Embedding_Playground

./: README.md
ESP32/01_Web Server and LED control/: README.md  onboard_led_control_by_web.py
ESP32/02_Temperature_Pressure_Humidiy_Check/: README.md
Micropython/ESP32/00_Wifi_Connection_Script/: README.md  connect_to_wifi.py
Micropython/ESP32/01_Web Server and LED control/: README.md
Micropython/ESP32/02_Temperature_Pressure_Humidiy_Check/: README.md  bme20.py  boot.py
Micropython/Raspberry_Pi_Pico/: README.md
Micropython/Raspberry_Pi_Pico/00_Setup/: README.md
Micropython/Raspberry_Pi_Pico/01_On_Board_LED_Blinking/: On_Board_LED_Blinking.py  README.md
Micropython/Raspberry_Pi_Pico/02_External_LED_blinking/: README.md
Raspberry_Pi_Pico/: README.md
Raspberry_Pi_Pico/00_Setup/: README.md
Raspberry_Pi_Pico/01_On_Board_LED_Blinking/: README.md
Raspberry_Pi_Pico/02_External_LED_blinking/: External_LED_blinking.py  README.md
Rust/: README.md
Rust/Raspberry_Pi_Pico_pico-blink/: Cargo.toml  memory.x
Rust/Raspberry_Pi_Pico_pico-blink/.cargo/: config.toml
Rust/Raspberry_Pi_Pico_pico-blink/src/: main.rs
